--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ https://www.tooplate.com/view/2125-artxibition
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-sm-6">
-                    <span>Hey! The Show is Starting in 52 Days.</span>
+                    <span>Hey! The Show is Starting in 29 Days.</span>
                 </div>
                 <div class="col-lg-6 col-sm-6">
                     <div class="text-button">
@@ -72,11 +72,7 @@ https://www.tooplate.com/view/2125-artxibition
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li><a href="index.html" class="active">Home</a></li>
-                            <li><a href="about.html">About Us</a></li>
-                            <li><a href="rent-venue.html">Rent Venue</a></li>
-                            <li><a href="shows-events.html">Shows & Events</a></li> 
-                            <li><a href="tickets.html">Tickets</a></li> 
+                           
                         </ul>        
                         <a class='menu-trigger'>
                             <span>Menu</span>
@@ -190,7 +186,7 @@ https://www.tooplate.com/view/2125-artxibition
 
     <!-- *** Map ***-->
     <div class="map-image" style="text-align: center">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/grd-K33tOSM?si=GY_riGmAtokFNgx1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/7hH5HEplM-A?si=QPKGwCX1i6HfojQR&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
 
@@ -382,13 +378,7 @@ https://www.tooplate.com/view/2125-artxibition
                             </div>
                             <div class="col-lg-6">
                                 <div class="menu">
-                                    <ul>
-                                        <li><a href="index.html" class="active">Home</a></li>
-                                        <li><a href="about.html">About Us</a></li>
-                                        <li><a href="rent-venue.html">Rent Venue</a></li>
-                                        <li><a href="shows-events.html">Shows & Events</a></li> 
-                                        <li><a href="tickets.html">Tickets</a></li> 
-                                    </ul>
+                                   
                                 </div>
                             </div>
                             <div class="col-lg-3">
