--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ https://www.tooplate.com/view/2125-artxibition
                 </div>
                 <div class="col-lg-6 col-sm-6">
                     <div class="text-button">
-                        <a href="rent-venue.html">Contact Us Now! <i class="fa fa-arrow-right"></i></a>
+                        <a href="">Contact Us Now! <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -106,7 +106,7 @@ https://www.tooplate.com/view/2125-artxibition
                         <h6>Opening on Thursday, October 03rd</h6>
                         <h2>VR DragonGP Monza 2024</h2>
                         <div class="main-white-button">
-                            <a href="ticket-details.html">Purchase Tickets</a>
+                            <a href="">Purchase Tickets</a>
                         </div>
                     </div>
                 </div>
@@ -122,28 +122,28 @@ https://www.tooplate.com/view/2125-artxibition
                 <div class="col-lg-12">
                     <div class="owl-show-events owl-carousel">
                         <div class="item">
-                            <a href="event-details.html"><img src="assets/images/show-events-01.jpg" alt=""></a>
+                            <a href=""><img src="assets/images/show-events-01.jpg" alt=""></a>
                         </div>
                         <div class="item">
-                            <a href="event-details.html"><img src="assets/images/show-events-02.jpg" alt=""></a> 
+                            <a href=""><img src="assets/images/show-events-02.jpg" alt=""></a> 
                         </div>
                         <div class="item">
-                            <a href="event-details.html"><img src="assets/images/show-events-03.jpg" alt=""></a> 
+                            <a href=""><img src="assets/images/show-events-03.jpg" alt=""></a> 
                         </div>
                         <div class="item">
-                            <a href="event-details.html"><img src="assets/images/show-events-04.jpg" alt=""></a> 
+                            <a href=""><img src="assets/images/show-events-04.jpg" alt=""></a> 
                         </div>
                         <div class="item">
-                            <a href="event-details.html"><img src="assets/images/show-events-01.jpg" alt=""></a> 
+                            <a href=""><img src="assets/images/show-events-01.jpg" alt=""></a> 
                         </div>
                         <div class="item">
-                            <a href="event-details.html"><img src="assets/images/show-events-02.jpg" alt=""></a> 
+                            <a href=""><img src="assets/images/show-events-02.jpg" alt=""></a> 
                         </div>
                         <div class="item">
-                            <a href="event-details.html"><img src="assets/images/show-events-03.jpg" alt=""></a> 
+                            <a href=""><img src="assets/images/show-events-03.jpg" alt=""></a> 
                         </div>
                         <div class="item">
-                            <a href="event-details.html"><img src="assets/images/show-events-04.jpg" alt=""></a> 
+                            <a href=""><img src="assets/images/show-events-04.jpg" alt=""></a> 
                         </div>
                     </div>
                 </div>
@@ -176,7 +176,7 @@ https://www.tooplate.com/view/2125-artxibition
                     <div class="right-content">
                         <h5><i class="fa fa-map-marker"></i> Headquarters</h5>
                         <span>Av Vicent Sos Baynat, <br>SN, 12006<br>Espaitec II<br>Castelló, España</span>
-                        <div class="text-button"><a href="show-events-details.html">Need Directions? <i class="fa fa-arrow-right"></i></a></div>
+                        <div class="text-button"><a href="">Need Directions? <i class="fa fa-arrow-right"></i></a></div>
                     </div>
                 </div>
             </div>
@@ -207,7 +207,7 @@ https://www.tooplate.com/view/2125-artxibition
                         <div class="down-content">
                             <div class="left-content">
                                 <div class="main-white-button">
-                                    <a href="ticket-details.html">Purchase Tickets</a>
+                                    <a href="">Purchase Tickets</a>
                                 </div>
                             </div>
                             <div class="right-content">
@@ -232,7 +232,7 @@ https://www.tooplate.com/view/2125-artxibition
                         <div class="down-content">
                             <div class="left-content">
                                 <div class="main-white-button">
-                                    <a href="ticket-details.html">Purchase Tickets</a>
+                                    <a href="">Purchase Tickets</a>
                                 </div>
                             </div>
                             <div class="right-content">
@@ -257,7 +257,7 @@ https://www.tooplate.com/view/2125-artxibition
                         <div class="down-content">
                             <div class="left-content">
                                 <div class="main-white-button">
-                                    <a href="ticket-details.html">Purchase Tickets</a>
+                                    <a href="">Purchase Tickets</a>
                                 </div>
                             </div>
                             <div class="right-content">
@@ -283,7 +283,7 @@ https://www.tooplate.com/view/2125-artxibition
     <div class="coming-events">
         <div class="left-button">
             <div class="main-white-button">
-                <a href="shows-events.html">Discover More</a>
+                <a href="">Discover More</a>
             </div>
         </div>
         <div class="container">
@@ -291,10 +291,10 @@ https://www.tooplate.com/view/2125-artxibition
                 <div class="col-lg-4">
                     <div class="event-item">
                         <div class="thumb">
-                            <a href="event-details.html"><img src="assets/images/event-01.jpg" alt=""></a>
+                            <a href=""><img src="assets/images/event-01.jpg" alt=""></a>
                         </div>
                         <div class="down-content">
-                            <a href="event-details.html"><h4>Circuit of Interlagos, Brasil</h4></a>
+                            <a href=""><h4>Circuit of Interlagos, Brasil</h4></a>
                             <ul>
                                 <li><i class="fa fa-clock-o"></i> Tuesday: 15:30-19:30</li>
                                 <li><i class="fa fa-map-marker"></i> Sao Paulo</li>
@@ -305,10 +305,10 @@ https://www.tooplate.com/view/2125-artxibition
                 <div class="col-lg-4">
                     <div class="event-item">
                         <div class="thumb">
-                            <a href="event-details.html"><img src="assets/images/event-02.jpg" alt=""></a>
+                            <a href=""><img src="assets/images/event-02.jpg" alt=""></a>
                         </div>
                         <div class="down-content">
-                            <a href="event-details.html"><h4>Circuit of Paul Ricard, Francia</h4></a>
+                            <a href=""><h4>Circuit of Paul Ricard, Francia</h4></a>
                             <ul>
                                 <li><i class="fa fa-clock-o"></i> Wednesday: 08:00-14:00</li>
                                 <li><i class="fa fa-map-marker"></i>Le Castellet, Francia</li>
@@ -319,10 +319,10 @@ https://www.tooplate.com/view/2125-artxibition
                 <div class="col-lg-4">
                     <div class="event-item">
                         <div class="thumb">
-                            <a href="event-details.html"><img src="assets/images/event-03.jpg" alt=""></a>
+                            <a href=""><img src="assets/images/event-03.jpg" alt=""></a>
                         </div>
                         <div class="down-content">
-                            <a href="event-details.html"><h4>Circuit of the Americas Blvd, USA</h4></a>
+                            <a href=""><h4>Circuit of the Americas Blvd, USA</h4></a>
                             <ul>
                                 <li><i class="fa fa-clock-o"></i> Thursday: 09:00-23:00</li>
                                 <li><i class="fa fa-map-marker"></i> Austin, Texas, USA</li>
